--- a/RegistrationAndLogin/RegistrationAndLogin/Views/Account/Login.cshtml
+++ b/RegistrationAndLogin/RegistrationAndLogin/Views/Account/Login.cshtml
@@ -13,14 +13,16 @@
             <div class="col-lg-12">@ViewBag.Message</div>
         </div><br />
 
-        <div class="row">
-            <div class="col-lg-2">@Html.LabelFor(a => a.Email)</div>
-            <div class="col-lg-10">@Html.TextBoxFor(a => a.Email, new { @class = "form-control" })</div>
-        </div><br />
-        <div class="row">
-            <div class="col-lg-2">@Html.LabelFor(a => a.Password)</div>
-            <div class="col-lg-10">@Html.TextBoxFor(a => a.Password, new { @class = "form-control", type = "Password" })</div>
-        </div><br />
+              <div class="row">
+                  <div class="col-lg-2">@Html.LabelFor(a => a.Email)</div>
+                  <div class="col-lg-10">@Html.TextBoxFor(a => a.Email, new { @class = "form-control" })</div>
+                  @Html.ValidationMessageFor(a => a.Email, "", new { @class = "text-danger" })
+              </div><br />
+                    <div class="row">
+                        <div class="col-lg-2">@Html.LabelFor(a => a.Password)</div>
+                        <div class="col-lg-10">@Html.TextBoxFor(a => a.Password, new { @class = "form-control", type = "Password" })</div>
+                        @Html.ValidationMessageFor(a => a.Password, "", new { @class = "text-danger" })
+                    </div><br />
         <input type="submit" value="Login" class="btn btn-primary" />
     }
 
